--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 
 # social links
-twitter_username: your-twitter-handle
-github_username:  your-github-handle
+twitter_username: twitter_NickName
+github_username:  github-NickName
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
